# fire_ops

./: .dockerignore  .gitignore  download_nltk_data.py
app/: OCR_INSTALL.md  RAG_SYSTEM_DOCUMENTATION.md  README.md  SETUP.md  asgi.py  check_ocr_deps.py  config.py  download_models.py  gunicorn.conf.py  gunicorn_simple.conf.py  init_rag.py  pyproject.toml  requirements.txt  run.sh  start_celery.py  start_celery_worker.py  test_bge_model.py
app/apps/: __init__.py
app/apps/api/: common.py
app/apps/api/announcement/: announcement.py
app/apps/api/chat/: chat.py
app/apps/api/communication/: direct.py
app/apps/api/device/: device.py
app/apps/api/documents/: document.py
app/apps/api/event/: event.py
app/apps/api/users/: admin.py  auth.py  users.py  views.py
app/apps/celery_tasks/: task.py
app/apps/dependencies/: auth.py  permissions.py
app/apps/form/: communication.py
app/apps/form/announcement/: form.py
app/apps/form/device/: device.py
app/apps/form/event/: form.py
app/apps/form/users/: form.py
app/apps/middleware/: middleware.py
app/apps/models/: __init__.py  announcement.py  base.py  communication.py  device.py  document.py  event.py  user.py
app/apps/models/users/: models.py
app/apps/tasks/: task.py
app/apps/utils/: __init__.py  aerich_patch.py  aes_helper.py  celery_utils.py  chat_session.py  chat_tools.py  common.py  device_helper.py  document_parser.py  generate_captcha.py  llm_optimizers.py  ocr_engines.py  rag_helper.py  react_agent.py  react_sql_agent.py  react_sse.py  redis_.py  token_.py  vector_db_selector.py  xml_react.py
app/apps/utils/mcp_tools/: mcp_bridge.py  source_utils.py
app/apps/utils/mcp_tools/tools/: __init__.py  builtin_sql.py  chat_document_download.py  vector_document_search.py
app/celery_tasks/: app.py  task.py
app/mcp_tools/: __init__.py  mcp_bridge.py  sql_plugin.py
app/mcp_tools/tools/: __init__.py  builtin_sql.py  chat_document_download.py  vector_document_search.py
app/migrations/models/: 0_20251001182000_init.py  0_20251125225440_init.py  0_20251226233458_init.py  0_20260322084206_init.py  0_20260322100622_init.py  10_20250621140156_update.py  14_20250621212621_update.py  1_20241116190922_update.py  1_20251003204501_update.py  1_20260316233144_update.py  1_20260503000000_add_user_contact.py  2_20251010233431_update.py  2_20260503000001_add_device_installer_contact.py  3_20250111000000_add_created_by_user_id_to_device.py  3_20250511223743_update.py  3_20260504000000_add_user_fullname.py  4_20250518104944_update.py  4_20260504074903_update.py  5_20250519230429_update.py  5_20260504083357_update.py  9_20250621111355_update.py
app/react_plugins/: README.md  chat_document_download.py  vector_document_search.py
app/static/: admin.html  chat.html  login.html  profile.html  redoc.standalone.js  register.html  upload.html
app/static/css/: chat.css  fonts.css
app/static/js/: redoc.standalone.js
app/vector_db/chroma/: chroma.sqlite3
conf/: supervisor-services.conf  supervisord.conf
docker/: DOCKER_SUPERVISOR_README.md  Dockerfile  Dockerfile-arm  build-arm.sh  build.sh
migrations/models/: 11_20250621185803_update.py  12_20250621202442_update.py  13_20250621202657_update.py  6_20250519231112_update.py  7_20250519233724_update.py  8_20250614214819_update.py
